--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <main>
         <section class="hero">
             <div class="hero-image">
-               <img src="/img/Captura de tela 2024-11-10 025119.png" class="" alt="glasses" />
+               <img src="Captura de tela 2024-11-10 025119.png" class="" alt="glasses" />
             </div>
         </section>
 
