--- a/index.html
+++ b/index.html
@@ -10,9 +10,13 @@
 <body>
     <header>
         <div class="container">
-            <h1>Futuristic Smart Glasses</h1>
+            <h1>Gugas lindo</h1>
             <nav>
                 <ul>
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#features">Features</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
         </div>
@@ -21,7 +25,7 @@
     <main>
         <section class="hero">
             <div class="hero-image">
-               <img src="Captura de tela 2024-11-10 025119.png" class="" alt="glasses" />
+               <img src="/img/Captura de tela 2024-11-10 025119.png" class="" alt="glasses" />
             </div>
         </section>
 
@@ -63,7 +67,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 Futuristic Smart Glasses. All rights reserved.</p>
+        <p>&copy; 2023 Futuristic Smart Glasses. All rights reserved.</p>
     </footer>
 
     <script src="script.js"></script>
